fixed pull to refresh and menu bar overflow

--- a/public/reader/src/css/chapter.css
+++ b/public/reader/src/css/chapter.css
@@ -57,10 +57,8 @@
 #bottom-nav-bar {
     position: fixed;
     bottom: 0;
-    width: 100%;
     transition: bottom 0.5s;
 }
-
 
 /* The container <div> - needed to position the dropup content */
 .dropup {
